--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 										</header>
 										<p>I am a skilled data analyst passionate about applying data-driven insights to solve real-world business problems, with expertise in <strong> Excel, SQL, Tableau, and R, to collect, clean, and analyze large datasets</strong>, while paying attention to details to uncover <strong> hidden insights and trends</strong>, also possess soft skills such as effective communication, teamwork, critical thinking which enable collaboration with colleagues and stakeholders.
                                             <p>
-											<p>I'm committed to continuing learning, and staying up-to-date with the latest data analytics techniques to improve their ability to  provide <strong> valuable insights and drive business success</strong>.
+											<p>I'm committed to continuing learning, and staying up-to-date with Industry trends to provide timely <strong> valuable insights to drive business success</strong>.
 											</p>
 										
 									</div>
@@ -119,7 +119,7 @@
 									</header>
 									<ul>
 										<li><a href="index.html">Homepage</a></li>
-										<li><a href="https://drive.google.com/file/d/1Y41JeLLyZDaTVPVWK4c5dWhU9jgJtbKk/view?usp=sharing">View Resume</a></li>											
+										<li><a href="https://drive.google.com/file/d/1I2Y3CP0GohGZ1j3k9H_b8LyqipnYgwKk/view?usp=sharing">View Resume</a></li>											
 								</nav>
 
 							<!-- Section -->
